# Grain-Rain-Intelligence-Valley

./: .gitignore  LICENSE  README.md  Webui.py  app.py  pyproject.toml  settings.py  test.py
src/grain_rain_intelligence_valley/: __init__.py  analytics.py  cli.py
tests/: conftest.py  test_analytics.py
webui_pages/chat/: chat.py
webui_pages/detection/: detection.py
webui_pages/grow_stage/: fasternet.py  grow_stage.py
webui_pages/segment/: segment.py
webui_pages/tianqi/: tianqi.py
